# progcontrol

./: CMakeLists.txt  LICENSE  README.md  build.sh  config.conf  lenghty_process.sh
src/: progcontrol.cpp
